--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test node --test",
+    "test:single": "cross-env NODE_ENV=test node",
     "dev:inspect": "nodemon --inspect index.js",
     "lint": "eslint ."
   },
