--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test node --test",
     "test:single": "cross-env NODE_ENV=test node",
+    "start:test": "cross-env NODE_ENV=test node index.js",
     "dev:inspect": "nodemon --inspect index.js",
     "lint": "eslint ."
   },
