--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
     "test:single": "cross-env NODE_ENV=test node",
     "start:test": "cross-env NODE_ENV=test node index.js",
     "dev:inspect": "nodemon --inspect index.js",
+    "build:ui": "rm -rf dist && cd ../frontend && npm run build && cp -r dist ../backend",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
     "lint": "eslint ."
   },
   "author": "sergio",
