--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test node --test",
     "test:single": "cross-env NODE_ENV=test node",
+    "test:one-by-one-file":"cross-env NODE_ENV=test node --test --test-concurrency 1",
     "start:test": "cross-env NODE_ENV=test node index.js",
     "dev:inspect": "nodemon --inspect index.js",
     "build:ui": "rm -rf dist && cd ../frontend && npm run build && cp -r dist ../backend",
